OpenAPIの実装をいろいろ考えながら進め中.但し動作未テストなので仕様だけ考えていく
